[package]
name = "vertree"
version = "0.1.0"
authors = ["Justin Sheehy <justin@iago.org>",
           "Andrew J. Stone <andrew.j.stone.1@gmail.com>"]
description = "A persistent trie where each node is typed and versioned"
repository = "https://github.com/justinsheehy/vertree"
keywords = ["tree", "trie", "immutable", "persistent"]
license = "Apache-2.0"

[dependencies]
error-chain = "0.5"
rmp = "^0.7"

[dev-dependencies]
assert_matches = "1.0"
quickcheck = "0.3"
rand = "0.3"
